src/main/java/com/example/finalprojectdtomarket/_core/errors/exception2/Exception500.java
package com.example.finalprojectdtomarket._core.errors.exception2;

public class Exception500 extends RuntimeException {
    public Exception500(String msg) {
        super(msg);
    }
}